crates/ohno_macros/src/enrich_err/snapshots/ohno_macros__enrich_err__test_attrs__preserves_multiple_generics_with_bounds.snap
---
source: crates/ohno_macros/src/enrich_err/test_attrs.rs
expression: format_tokens(result)
---
fn test_function<T: Display, U: Clone>(value: T, other: U) -> Result<(), OhnoErrorType> {
    (|| { Ok(()) })()
        .map_err(|mut e| {
            let msg = "error in function test_function";
            ohno::Enrichable::add_enrichment(
                &mut e,
                ohno::EnrichmentEntry::new(msg, file!(), line!()),
            );
            e
        })
}
